--- a/src/index.css
+++ b/src/index.css
@@ -42,15 +42,16 @@ html {
 /* Hide scrollbar arrows/buttons for clean floating appearance */
 ::-webkit-scrollbar-button {
   display: none;
-  width: 0;
-  height: 0;
+  width: 0 !important;
+  height: 0 !important;
 }
 
 /* Ensure scrollbar corner is transparent */
 ::-webkit-scrollbar-corner {
+  background: transparent !important;
   background-color: transparent !important;
-  width: 0;
-  height: 0;
+  width: 0 !important;
+  height: 0 !important;
 }
 
 /* Global Scrollbar Styling - Webkit Browsers (Chrome, Safari, Edge) */
@@ -61,10 +62,12 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent !important;
   background: transparent !important;
+  background-color: transparent !important;
   border-radius: var(--scrollbar-border-radius);
-  width: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  border: none !important;
 }
 
 ::-webkit-scrollbar-thumb {
